support for checking out with iphone

--- a/buttons.html
+++ b/buttons.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, user-scalable=false;">
   <link rel="stylesheet" href="dist/ios7css.css" type="text/css">
 </head>
 <body>
