--- a/dialog_two_buttons.html
+++ b/dialog_two_buttons.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, user-scalable=false;">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="dist/ios7css.css" type="text/css">
 </head>
 <body>
   <h3>Dialog with two buttons:</h3>
-
+  <ul class="list">
+    <li>List 1</li>
+    <li>List 2</li>
+    <li>List 3</li>
+    <li>List 4</li>
+    <li>List 5</li>
+    <li>List 6</li>
+    <li>List 7</li>
+    <li>List 8</li>
+    <li>List 9</li>
+    <li>List 10</li>
+    <li>List 11</li>
+    <li>List 12</li>
+    <li>List 13</li>
+    <li>List 14</li>
+    <li>List 15</li>
+    <li>List 16</li>
+    <li>List 17</li>
+    <li>List 18</li>
+    <li>List 19</li>
+  </ul>
   <div class="dialog">
     <div class="title">Terms and Conditions</div>
     <div class="content">I agree to the iOS, iCloud and Game Center Terms and Conditions and the Apple Privacy Policy. I agree to the iOS, iCloud and Game Center Terms and Conditions and the Apple Privacy Policy. I agree to the iOS, iCloud and Game Center Terms and Conditions and the Apple Privacy Policy.</div>
