use first demo as landing demo, added analytics tracking

--- a/buttons.html
+++ b/buttons.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="dist/ios7css.css" type="text/css">
+  <script src="js/track.js"></script>
 </head>
 <body>
   <div class="button-group">
@@ -29,5 +30,6 @@
   <br><br>
   <button class="fifth">Fifth</button>
   <br><br>
+
 </body>
 </html>
