--- a/list_with_left_toggle.html
+++ b/list_with_left_toggle.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="dist/ios7css.css" type="text/css">
+  <script src="js/track.js"></script>
 </head>
 <body>
   <ul class="list toggle">
