--- a/context_menu.html
+++ b/context_menu.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="dist/ios7css.css" type="text/css">
+  <script src="js/track.js"></script>
 </head>
 <body>
   <h3>Context menu</h3>
