--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="dist/ios7css.css" type="text/css">
   <link rel="stylesheet" href="css/demo.css" type="text/css">
+  <script src="js/track.js"></script>
   <script src="js/angular.min.js"></script>
   <script src="js/application.js"></script>
   <script src="js/controllers.js"></script>
